<resources>
    <string name="app_name">OniGoing</string>
    <string name="type_anime_title">Type anime title…</string>
    <string name="header_status_currently_watching">Currently watching</string>
    <string name="total_nepisodes">total\nepisodes</string>
    <string name="total_ntitles">total\ntitles</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_lists">Lists</string>
    <string name="menu_title_profile">Profile</string>
    <string name="on">On</string>
    <string name="account">Account</string>
    <string name="credentials">Credentials</string>
    <string name="password">Password…</string>
    <string name="email">Email…</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_results">No results…</string>
    <string name="settings_header">Settings</string>
    <string name="status_watched">Watched: %1$s</string>
    <string name="status_actual">In progress: %1$s</string>
    <string name="status_planned">Planned: %1$s</string>
    <string name="status_stopped">Stopped: %1$s</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="done">Done</string>
    <string name="series">series</string>
    <string name="sorted_by_mark">Sorted by mark</string>
    <string name="restart_app_for_theme_snack_bar">Please, restart the app to apply new theme</string>
    <string name="incorrect_input">Incorrect input</string>
    <string name="soon">Soon</string>
    <string name="cancelled">Cancelled</string>
    <string name="paused">Paused</string>
    <string name="no_info">No info</string>
    <string name="release">release</string>

    <plurals name="plural_episodes">
        <item quantity="zero">%1$d episodes</item>
        <item quantity="one">%1$d episode</item>
        <item quantity="two">%1$d episodes</item>
        <item quantity="few">%1$d episodes</item>
        <item quantity="many">%1$d episodes</item>
        <item quantity="other">%1$d episodes</item>
    </plurals>

    <string-array name="sorting_filters">
        <item>Sorted by series</item>
        <item>Sorted by name</item>
        <item>Sorted by mark</item>
        <item>Sorted by date</item>
    </string-array>

</resources>