<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/action_bar_small_padding_neg"
        android:background="@drawable/top_background"
        android:paddingTop="@dimen/action_bar_small_padding"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/element_base_size"
            android:layout_margin="@dimen/margin_base"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/TextLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/account" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        style="@style/CardViewStandart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_base"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_base_size"
                android:layout_margin="@dimen/margin_base"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_user_name"
                    style="@style/TextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/credentials"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cv_img"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <ImageView
                android:id="@+id/line_1"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginStart="-2dp"
                android:layout_marginEnd="-2dp"
                android:background="@drawable/custom_wave_divider"
                android:scaleType="center" />

            <LinearLayout
                android:id="@+id/ll_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_base_size"
                android:layout_margin="@dimen/margin_base"
                android:background="@drawable/rounded"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_email"
                    style="@style/TextSmall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/margin_base"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textColorHint="@color/dark"
                    android:textCursorDrawable="@drawable/cursor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/element_base_size"
                android:layout_marginHorizontal="@dimen/margin_base"
                android:background="@drawable/rounded"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_password"
                    style="@style/TextSmall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/margin_base"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textColorHint="@color/dark"
                    android:textCursorDrawable="@drawable/cursor" />

                <ImageView
                    android:id="@+id/iv_hide"
                    android:layout_width="@dimen/element_base_size"
                    android:layout_height="@dimen/element_base_size"
                    android:padding="@dimen/button_inner_padding_more"
                    android:src="@drawable/hide" />

                <ImageView
                    android:id="@+id/iv_show"
                    android:layout_width="@dimen/element_base_size"
                    android:layout_height="@dimen/element_base_size"
                    android:padding="@dimen/button_inner_padding_more"
                    android:src="@drawable/show"
                    android:visibility="gone" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_log_in"
                style="@style/CardViewButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/element_base_size"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_base"
                android:layout_marginTop="@dimen/margin_double">

                <TextView
                    style="@style/TextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/margin_double"
                    android:gravity="center"
                    android:text="@string/log_in" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_registration"
                style="@style/CardViewButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/element_base_size"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_base"
                android:layout_marginVertical="@dimen/margin_base">

                <TextView
                    style="@style/TextSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/margin_double"
                    android:gravity="center"
                    android:text="@string/create_account" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>